--- a/assets/css/appResume/premium/ui/_fontSize.scss
+++ b/assets/css/appResume/premium/ui/_fontSize.scss
@@ -159,7 +159,7 @@
         letter-spacing:-0.8px;
     }
 }
-.d-phone {
+html.d-phone {
     #app[data-font="avant"],
     #app[data-font="gotham"],
     #app[data-font="proxima"],
