--- a/assets/css/appResume/premium/ui/_main.scss
+++ b/assets/css/appResume/premium/ui/_main.scss
@@ -511,7 +511,7 @@
         }
     }
 }
-.d-phone {
+html.d-phone {
     .resume {
         section[data-section="coverletter"] {
             &[data-color="black"]{
