--- a/assets/css/private/_main.scss
+++ b/assets/css/private/_main.scss
@@ -44,7 +44,7 @@ body {
 .resume__preview {
     min-height:200vh;
 }
-.d-phone {
+html.d-phone {
     #app {
         .iScrollIndicator {
             background-color:rgba($blueLight,.6);
