--- a/assets/css/sections/jptest/_jptestEnter.scss
+++ b/assets/css/sections/jptest/_jptestEnter.scss
@@ -121,7 +121,7 @@
         }
     }
 }
-.d-tablet {
+html.d-tablet {
     .oScreen__jptest__enter__phone {
         &__left {
             transform:translate3d(-20vw, 25vw, 0) rotate(0deg) scale(0.89);
