--- a/assets/templates/root-mobile.html
+++ b/assets/templates/root-mobile.html
@@ -36,7 +36,7 @@
     </app-popups>
 
     <app-offers>
-        <offer-plan></offer-plan>
+        <!-- <offer-plan></offer-plan> -->
         <offer-votes></offer-votes>
     </app-offers>
 
@@ -97,7 +97,7 @@
                 jptest: $root.tags["popup-jptest"]
             },
             offers: {
-                plan: $root.tags["offer-plan"],
+                // plan: $root.tags["offer-plan"],
                 votes: $root.tags["offer-votes"]
             },
             overview: {
