--- a/assets/templates/sections/profile/mobile/profileData.html
+++ b/assets/templates/sections/profile/mobile/profileData.html
@@ -6,7 +6,7 @@
 
         <div class="screenMobile__navbar" data-gradient="white">
             <div onClick={ hide } onUpdate="none" class="screenMobile__nav__close"></div>
-            <div class="screenMobile__nav__title">Данные профиля</div>
+            <div class="screenMobile__nav__title">Редактирование</div>
             <div onClick={ open.dropMenu } onUpdate="none" class="screenMobile__nav__options"></div>
         </div>
         <div name="content" class="section-scroll section__content">
