--- a/public/css/sections/home/_header.scss
+++ b/public/css/sections/home/_header.scss
@@ -64,7 +64,7 @@
         @extend .mb-l;
     }
     .btn-white-hover {
-        // .d-phone & {
+        // html.d-phone & {
         //     @extend .c-lime;
         //     box-shadow:inset 0 0 0 2px $lime;
         // }
