--- a/public/css/sections/jobs/_ui.scss
+++ b/public/css/sections/jobs/_ui.scss
@@ -232,7 +232,7 @@
         @extend .letterSpacing-0;
     }
 }
-.d-no-phone {
+html.d-no-phone {
     .dropmenu {
         &__item {
             &:hover {
