--- a/public/css/sections/jobs/search/_list.scss
+++ b/public/css/sections/jobs/search/_list.scss
@@ -59,7 +59,7 @@
             @extend .breakWord;
             margin-bottom:1px;
 
-            .d-no-touch &:hover {
+            html.d-no-touch &:hover {
                 @extend .transition-default;
             }
             html.d-tablet & {
