--- a/assets/css/appResume/premium/ui/_editplace.scss
+++ b/assets/css/appResume/premium/ui/_editplace.scss
@@ -69,7 +69,7 @@
 		@extend .display-none;
 	}
 }
-.d-no-mobile {
+html.d-no-mobile {
 	.blur {
 		@include accelerate();
 		@extend .userSelect-none;
@@ -94,12 +94,12 @@
 		}
 	}
 }
-.d-mobile {
+html.d-mobile {
 	.blur {
 		@extend .opacity-0;
 	}
 }
-.d-phone {
+html.d-phone {
 	.blur {
 		max-height:180px;
 		@extend .overflow-hidden;
