--- a/assets/templates/sections/list/mobile/resumeSection.html
+++ b/assets/templates/sections/list/mobile/resumeSection.html
@@ -15,10 +15,9 @@
                     <div class="pos-rel w64 h32">
                         <svg onClick={ open.stat } onUpdate="none" class="pos-centered w56 h56" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 125" enable-background="new 0 0 100 100" xml:space="preserve"><path class="fill-blue" d="M91.842,48.836C83.613,33.192,67.581,23.474,50,23.474S16.387,33.192,8.158,48.836c-0.383,0.729-0.383,1.599,0,2.328  C16.386,66.808,32.419,76.525,50,76.525s33.614-9.718,41.842-25.361C92.225,50.435,92.225,49.565,91.842,48.836z M50,71.525  c-15.278,0-29.251-8.214-36.781-21.525C20.749,36.688,34.722,28.474,50,28.474S79.251,36.688,86.781,50  C79.251,63.312,65.278,71.525,50,71.525z M52.015,35.132c-1.866-0.244-3.675-0.143-5.375,0.246c-0.536,0.123-0.826,0.69-0.594,1.188  c0.615,1.323,0.87,2.845,0.625,4.449c-0.49,3.209-3.035,5.842-6.229,6.418c-1.471,0.265-2.881,0.11-4.138-0.36  c-0.503-0.188-1.044,0.138-1.127,0.669c-0.328,2.1-0.234,4.338,0.544,6.683c1.989,5.997,7.449,10.355,13.765,10.566  c9.263,0.309,16.724-7.782,15.35-17.241C63.886,41.21,58.569,35.989,52.015,35.132z"/></svg>
                     </div>
-                    <!-- <span onClick={ open.stat } onUpdate="none" class="c-blue fontSize-34 fontWeight-8">+18</span> -->
                     <div class="fontSize-16 fontWeight-normal c-gray mt-xss">просмотры</div>
                 </div>
-                <div class="screenMobile__header__cover" data-color={ item.plan == "premium" ? item.config.color : "blue" }>{ item.post ? item.post[0] : 'R' }<div class="screenMobile__header__cover__photo" style="background-image:url({ item.commons.photo })"></div></div>
+                <div class="screenMobile__header__cover" data-color={ item.plan == "premium" ? item.config.color : "blue" }>{ item.post ? item.post[0] : 'R' }<div if={ item.commons.photo } class="screenMobile__header__cover__photo" style="background-image:url({ item.commons.photo })"></div></div>
             </div>
             <div class="screenMobile__content">
                 <div class="fontSize-24 fontWeight-bold plr-m text-center text-truncate mb-m">{ item.post }</div>
