--- a/assets/css/states/_states.scss
+++ b/assets/css/states/_states.scss
@@ -78,6 +78,9 @@
 .bg-none {
 	background:none;
 }
+.bg-transparent {
+	background-color:transparent;
+}
 .bg-cover {
 	background-position:top center;
 	background-repeat:no-repeat;
