--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -36,6 +36,7 @@
 @import 'ui/slider';
 @import 'ui/carousel';
 @import 'ui/social';
+@import 'ui/flags';
 @import 'ui/chart/chartist/chartist';
 @import 'ui/chart/chartRadial';
 @import 'states/fontSize';
