--- a/assets/css/appResume/premium/ui/_textarea.scss
+++ b/assets/css/appResume/premium/ui/_textarea.scss
@@ -16,7 +16,7 @@
         }
         &::placeholder {
             color:rgba($steel,.8);
-            @extend .lineHeight-l;
+            line-height:30px;
         }
         &::-webkit-input-placeholder {
             color:rgba($steel,.8);
