--- a/assets/templates/ui/input.html
+++ b/assets/templates/ui/input.html
@@ -8,7 +8,8 @@
 
 <script>
 
-    var $ = this;
+    var $ = this,
+    $input = null;
 
     $.on("before-mount", function(){
         if ($.opts.update && $.opts.cursor){
@@ -31,7 +32,7 @@
     $.on("mount", function(){
         if (!window.$$ || window.$$ && !$$.fn.mask) return;
         if ($.opts.pattern || $.opts.mask){
-            var $input = $$($.input);
+            $input = $$($.input);
             if ($.opts.pattern){
                 $input.mask($.opts.pattern);
             }
